--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,8 @@
 [filter "lfs"]
-	clean = git lfs clean %f
-	smudge = git lfs smudge %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
 	required = true
+	clean = git-lfs clean -- %f
 [user]
 	name = Josef Dolezal
 	email = pepik.ml@gmail.com
