--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
 	st = status
 	ci = commit
 	co = checkout
+	cob = checkout -b
 	br = branch
 	ps = push
 	po = "!git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD)"
