--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,8 @@
 	br = branch
 	ps = push
 	po = "!git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD)"
+	dw = diff
+	dc = diff --cached
 [push]
 	default = simple
 [core]
